fixed spacing

--- a/styles/all.css
+++ b/styles/all.css
@@ -258,13 +258,15 @@ index.html:target {
 .logotextdiv {
   margin-bottom: 7%;
   z-index: 1;
+  display: flex;
+  justify-content: space-between;
 }
 
 .logo {
-  width: 45%;
+  width: 500px;
   /* height: 20%; */
   border-radius: 5%;
-  margin-right: 5%;
+  margin-right: 95px;
   margin-bottom: 5%;
   box-shadow: 0px 2px 24px rgba(163, 163, 163, 0.5)
 }
@@ -277,7 +279,7 @@ index.html:target {
 
 .personalitypic {
   /* width: 49%; */
-  width: 45%;
+  width: 500px;
   margin-right: 5%;
   margin-bottom: 5%;
   border-radius: 5%;
@@ -286,7 +288,7 @@ index.html:target {
 
 .textdiv {
   display: inline-block;
-  width: 49%;
+  width: 400px;
   height: 100%;
   vertical-align: top;
   padding: none;
@@ -297,12 +299,16 @@ index.html:target {
   /* float: right; */
   display: inline-block;
   /* width: 45%; */
-  width: 49%;
+  width: 400px;
   height: 100%;
   vertical-align: top;
   padding: none;
 }
 
+.personalitypicabouttextdiv {
+  display: flex;
+  justify-content: space-between;
+}
 
 
 .text {
